--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "express": "^4.16.3",
         "file-loader": "^2.0.0",
         "morgan": "^1.9.0",
+        "mysql": "^2.16.0",
         "react": "^16.5.0",
         "react-dom": "^16.5.0",
         "react-router-dom": "^4.3.1",
